Use a template for the mail

--- a/languages/en-GB/contactpage.json
+++ b/languages/en-GB/contactpage.json
@@ -12,5 +12,6 @@
     "error.incomplete": "Please fill all fields",
     "error.incomplete.recaptcha": "Please fill the captcha!",
     "error.invalid.recaptcha": "Captcha is invalid!",
-    "send.success": "Your message has been sent. We will respond quickly."
+    "send.success": "Your message has been sent. We will respond quickly.",
+    "email.header": "%1 sent the following message:"
 }
